--- a/sections/faq.liquid
+++ b/sections/faq.liquid
@@ -1,4 +1,5 @@
 {%- liquid
+
   assign sizes_string = '(min-width: 768px) calc((100vw - 72px) / 2), 100vw)'
   assign the_image = section.blocks | where: 'type', 'image' | first
   assign the_text = section.blocks | where: 'type', 'text' | first
@@ -23,20 +24,19 @@
   {% capture content_element %}
     <div class="col-12 col-sm-6 {% if section.settings.media_position == 'media_last' %}col-sm-order-2{% endif %}" {{ the_image.shopify_attributes }}>
       {%- if the_image != blank and the_image.settings.media_toggle == 'show_image' -%}
-        {%- render 'img',
-          src: the_image.settings.image,
+        {%- render 'img'
+          , src: the_image.settings.image,
           sizes: sizes_string,
           aspect_ratio: the_image.settings.media_aspect_ratio,
           custom_classes: 'sm-br-img' -%}
       {%- elsif the_image != blank -%}
-        {%- render 'video',
-          src: the_image.settings.video_url,
+        {%- render 'video'
+          , src: the_image.settings.video_url,
           autoplay: true,
           loop: true,
           aspect_ratio: the_image.settings.media_aspect_ratio,
           lazyload: true,
-          custom_classes: 'sm-br-img'
-        -%}
+          custom_classes: 'sm-br-img' -%}
       {%- else -%}
         <div class="flex {% if section.settings.media_position == 'media_last' %}horizontal-right{% else %}horizontal-left{% endif %}" {{ the_text.shopify_attributes }}>
           <div class="text-align-left sm-text-align-left col-sm-max-5">
@@ -47,7 +47,7 @@
             {% endif %}
             {% if the_text.settings.text != blank %}
               <div class="rte mb-16">
-                {{the_text.settings.text}}
+                {{ the_text.settings.text }}
               </div>
             {% endif %}
           </div>
@@ -62,13 +62,12 @@
   id="{{ section.id }}"
   class="pt pb sm-pt sm-pb container{% if section.settings.enable_full_width %} sm-edge-to-edge sm-p-page{% endif %} color-{{ section.settings.color_scheme }}"
   style="
-    --pt: {{ section.settings.padding_top | append: 'px' }};
-    --pb: {{ section.settings.padding_bottom | append: 'px' }};
-    --sm-pt: {{ section.settings.md_padding_top | append: 'px' }};
-    --sm-pb: {{ section.settings.md_padding_bottom | append: 'px' }};
-  ">
-  <div class="grid col-align-items-center faq">
-    {{content_element}}
+            --pt: {{ section.settings.padding_top | append: 'px' }};
+            --pb: {{ section.settings.padding_bottom | append: 'px' }};
+            --sm-pt: {{ section.settings.md_padding_top | append: 'px' }};
+            --sm-pb: {{ section.settings.md_padding_bottom | append: 'px' }};
+          "><div class="grid col-align-items-center faq">
+    {{ content_element }}
     {%- if section.blocks.size > 0 -%}
       <div class="col-12 col-sm-6 questions__wrapper col-sm-max-6 text-align-left sm-text-align-left">
         {%- if the_image != blank -%}
@@ -79,11 +78,11 @@
           {% endif %}
           {% if the_text.settings.text != blank %}
             <div class="rte mb-16">
-              {{the_text.settings.text}}
+              {{ the_text.settings.text }}
             </div>
           {% endif %}
         {%- endif -%}
-    
+
         {%- for block in section.blocks -%}
           {%- if block.type == 'question' -%}
             <details class="faq-item" {{ block.shopify_attributes }}>
@@ -109,7 +108,7 @@
     "name": "t:sections.faq.name",
     "disabled_on": {
       "groups": ["header", "aside"]
-    }, 
+    },
     "settings": [
       {
         "type": "paragraph",
@@ -131,16 +130,13 @@
           {
             "value": "h3",
             "label": "t:sections.typography.style_options.heading"
-          },
-          {
+          }, {
             "value": "subheading",
             "label": "t:sections.inputs.text.subtitle"
-          },
-          {
+          }, {
             "value": "body-text",
             "label": "t:sections.typography.style_options.body_text"
-          },
-          {
+          }, {
             "value": "body-text-bold",
             "label": "t:sections.typography.style_options.body_text_bold"
           }
@@ -149,30 +145,26 @@
       {
         "type": "header",
         "content": "t:sections.headers.desktop_layout"
-      },
-      {
+      }, {
         "type": "checkbox",
         "id": "enable_full_width",
         "label": "t:sections.layout.section_width.full_width",
         "default": false
-      },
-      {
+      }, {
         "type": "select",
         "id": "media_position",
         "label": "t:sections.layout.media_position.label",
-        "options": [ 
+        "options": [
           {
             "value": "media_first",
             "label": "t:sections.layout.media_position.media_first"
-          },
-          {
+          }, {
             "value": "media_last",
             "label": "t:sections.layout.media_position.media_last"
           }
         ],
         "default": "media_first"
-      },
-      {
+      }, {
         "type": "range",
         "id": "md_padding_top",
         "min": 0,
@@ -181,8 +173,7 @@
         "unit": "px",
         "label": "t:sections.layout.margin_top",
         "default": 0
-      },
-      {
+      }, {
         "type": "range",
         "id": "md_padding_bottom",
         "min": 0,
@@ -191,12 +182,10 @@
         "unit": "px",
         "label": "t:sections.layout.margin_bottom",
         "default": 40
-      },
-      {
+      }, {
         "type": "header",
         "content": "t:sections.headers.mobile_layout"
-      },
-      {
+      }, {
         "type": "range",
         "id": "padding_top",
         "min": 0,
@@ -205,8 +194,7 @@
         "unit": "px",
         "label": "t:sections.layout.margin_top",
         "default": 0
-      },
-      {
+      }, {
         "type": "range",
         "id": "padding_bottom",
         "min": 0,
@@ -227,14 +215,12 @@
             "type": "image_picker",
             "id": "image",
             "label": "t:sections.inputs.image_picker.image"
-          },
-          {
+          }, {
             "type": "text",
             "id": "video_url",
             "label": "t:sections.inputs.url.video_url",
             "info": "t:sections.inputs.url.video_url__info"
-          },
-          {
+          }, {
             "id": "media_aspect_ratio",
             "type": "select",
             "label": "t:sections.images.aspect_ratio.label",
@@ -254,23 +240,20 @@
               {
                 "value": "square",
                 "label": "t:sections.images.aspect_ratio.square"
-              },
-              {
+              }, {
                 "value": "landscape",
                 "label": "t:sections.images.aspect_ratio.landscape_4_3"
               }
             ]
-          },
-          {
+          }, {
             "type": "radio",
             "id": "media_toggle",
             "label": "t:sections.images.media_toggle.label",
             "options": [
               {
-              "value": "show_image",
-              "label": "t:sections.images.media_toggle.show_image"
-              },
-              {
+                "value": "show_image",
+                "label": "t:sections.images.media_toggle.show_image"
+              }, {
                 "value": "show_video",
                 "label": "t:sections.images.media_toggle.show_video"
               }
@@ -278,8 +261,7 @@
             "default": "show_image"
           }
         ]
-      },
-      {
+      }, {
         "name": "t:sections.blocks.text.name",
         "type": "text",
         "limit": 1,
@@ -289,16 +271,14 @@
             "id": "title",
             "label": "t:sections.inputs.text.title",
             "default": "FAQ section"
-          },
-          {
+          }, {
             "type": "richtext",
             "id": "text",
             "label": "t:sections.inputs.text.text",
             "default": "<p>Show usually asked questions with answers and pair with image</p>"
           }
         ]
-      },
-      {
+      }, {
         "type": "question",
         "name": "Question",
         "settings": [
@@ -307,8 +287,7 @@
             "id": "title",
             "label": "t:sections.inputs.text.title",
             "default": "Do you ship to my country?"
-          },
-          {
+          }, {
             "type": "richtext",
             "id": "text",
             "label": "t:sections.inputs.text.text",
@@ -317,19 +296,19 @@
         ]
       }
     ],
-    "presets": [{
-      "name": "t:sections.faq.name",
-      "blocks": [
-        {
-          "type": "text"
-        },
-        {
-          "type": "question"
-        },
-        {
-          "type": "question"
-        }
-      ]
-    }]
+    "presets": [
+      {
+        "name": "t:sections.faq.name",
+        "blocks": [
+          {
+            "type": "text"
+          }, {
+            "type": "question"
+          }, {
+            "type": "question"
+          }
+        ]
+      }
+    ]
   }
 {% endschema %}
