--- a/assets/component-hero.css
+++ b/assets/component-hero.css
@@ -4,6 +4,7 @@
   width: 100%;
   margin-left: auto;
   margin-right: auto;
+  top:80px;
 }
 
 .hero .hero__media {
@@ -37,7 +38,7 @@
   right: 0;
   opacity: 0;
   z-index: 1;
-  background-color: var(--color-overlay);
+  background-color:transparent;
 }
 
 .hero .hero__media picture {
@@ -51,7 +52,7 @@
   width: 100%;
   height: 100%;
   z-index: 1;
-  object-fit: cover;
+  /* object-fit: cover; */
 }
 
 .hero .hero__text-container {
@@ -66,6 +67,31 @@
 .hero--slideshow .hero__text-container {
   padding: calc(var(--container-margin)*2);
 }
+
+@media only screen and (max-width: 1600px) {
+ .hero .hero__media {
+   height:645px;
+ }
+}
+
+@media only screen and (max-width: 1300px) {
+  .hero{
+     height:585px;
+  }
+ .hero .hero__media {
+   height:585px;
+ }
+}
+
+@media only screen and (max-width: 1100px) {
+    .hero{
+     height:505px;
+  }
+ .hero .hero__media {
+    height:505px;
+ }
+}
+
 
 @media only screen and (max-width: 767px) {
   .height-auto:not(.hero--contained) .hero .hero__media {
@@ -124,3 +150,4 @@
     flex-direction: column;
   }
 }
+
