--- a/assets/critical.css
+++ b/assets/critical.css
@@ -48,7 +48,11 @@ html:not(.template-password) main#MainContent {
   .container.sm-down-edge-to-edge > * {
     grid-column: 1/-1;
   }
+  .header-content{
+    margin: 0 20px;
+  }
 }
+
 @media only screen and (max-width: 1023px) {
   .container.md-down-edge-to-edge > * {
     grid-column: 1/-1;
@@ -72,7 +76,7 @@ html:not(.template-password) main#MainContent {
   flex-direction: row !important;
 }
 .center-center {
-  align-items: center;
+  /* align-items: center; */
   justify-content: center;
 }
 .space-between {
@@ -671,7 +675,7 @@ header.header {
   font-style: var(--font-site-header-style);
   font-weight: var(--font-site-header-weight);
   text-transform: var(--font-site-header-text-transform);
-  letter-spacing: var(--font-site-header-letter-spacing);
+  /* letter-spacing: var(--font-site-header-letter-spacing); */
 }
 header.header--shadow:not(.overlay),
 .sticky-header-show header.header--shadow {
@@ -710,7 +714,9 @@ header .header-content {
   justify-content: space-between;
   align-items: center;
   gap: var(--gap);
-  padding: var(--padding-vertical) var(--padding-horizontal);
+  height: 80px;
+  overflow:hidden;
+  /* padding: var(--padding-vertical) var(--padding-horizontal); */
 }
 html:not(.sticky-header-show) header.header.overlay.use-background { 
   color: var(--color-background);
@@ -741,15 +747,22 @@ html:not(.sticky-header-show) .header-logo.--alt-on-overlay .site-logo.--alt {
   display: flex;
   flex-direction: row;
   align-items: center;
-
   gap: var(--gap);
 }
 .header-item.--left {
   flex: 1 1 0%;
+  justify-content:flex-start;
+  gap:16px;
 }
+
+.header-item.--center{
+  justify-content: center;
+}
+
 .header-item.--right {
   flex: 1 1 0%;
-  justify-content: flex-end;
+  justify-content: end;
+  gap:8px;
 }
 .logo-left__menu-left .header-shortlinks {
   order: 2;
@@ -759,8 +772,8 @@ html:not(.sticky-header-show) .header-logo.--alt-on-overlay .site-logo.--alt {
 }
 
 .header-item__link {
-  --padding: 24px;
-  padding: calc(var(--padding) / 2);
+  /* --padding: 24px;
+  padding: calc(var(--padding) / 2); */
   display: grid;
   place-content: center;
   cursor: pointer;
@@ -770,6 +783,7 @@ html:not(.sticky-header-show) .header-logo.--alt-on-overlay .site-logo.--alt {
   display: grid;
   place-content: center;
 }
+
 [data-use-icons="true"] .header-item__link .cart-blip {
   display: grid;
   position: absolute;
@@ -1670,9 +1684,10 @@ input[type='checkbox']:not(.swatch) {
 }
 
 /* Icons */
-svg.feather {
+/* svg.feather {
   stroke-width: var(--icon-stroke);
-}
+} */
+
 
 /* Banner hovers */
 a > .media img {
