--- a/sections/new-header.liquid
+++ b/sections/new-header.liquid
@@ -1,9 +1,3 @@
-{%- comment -%}
-  Drawer styles are lazily loaded.
-  Lazy load is based on Filament Group method: https://www.filamentgroup.com/lab/load-css-simpler/
-  While it's a bit outdated, the method is still valid way of asynchronously loading styles.
-  However as it relies on JavaScript to work, we have a <noscript> fallback..
-{%- endcomment -%}
 
 <link rel="stylesheet" href="{{ 'main-header.css' | asset_url }}" media="print" onload="this.media='all'">
 <link rel="stylesheet" href="{{ 'component-drawers.css' | asset_url }}" media="print" onload="this.media='all'">
@@ -216,7 +210,7 @@
             <span class="medium-down--hide">{{ 'customer.account.title' | t }}</span>
           {%- endunless -%}
         </a>
-         {%- else -%}  <!-- Display Log In and Sign Up buttons if the customer is not logged in -->
+         {%- else -%}  
     <a href="{{ routes.account_register_url }}" class="header-item__link" id="signup">
       <button class="button-signup"><span>Sign Up</span></button>
     </a>
@@ -224,7 +218,7 @@
       <button class="button-login"><span>Login</span></button>
     </a>
   {%- endif -%}   
-            <!--routes.login_url -->
+        
 
       {%- comment -%} Cart button {%- endcomment -%}
       {%- liquid 
@@ -348,6 +342,7 @@
         ],
         "default": "fixed"
       },
+
       {
         "type": "range",
         "id": "shortcut_limit",
@@ -708,7 +703,6 @@
             "label": "t:sections.header.blocks.menu-collection.settings.menu_parent.label",
             "info": "t:sections.header.blocks.menu-collection.settings.menu_parent.info"
           },
-
           {
             "type": "range",
             "id": "products_per_row_desktop",
@@ -789,5 +783,5 @@
         ]
       }
     ]
-  }
+}
 {% endschema %}
