--- a/sections/movie-look.liquid
+++ b/sections/movie-look.liquid
@@ -86,7 +86,7 @@
           "type": "text",
           "id": "video_url",
           "label": "Video URL",
-          "default": "https://www.youtube.com/watch?v=4IdoUuoG1Rc"
+          "default": "https://cdn.shopify.com/videos/c/o/v/b4ef24dd8f794241b068b56db3822ccd.mp4"
         },
     {
       "type": "image_picker",
@@ -285,7 +285,7 @@
           "type": "richtext",
           "id": "text",
           "label": "t:sections.inputs.text.text",
-          "default": "<p>Use this section to highlight multiple products in a single image. This helps your customers to visualize how certain products look together.</p>"
+          "default": "<p>A trip to the movies is a perfect reward, prize, or gift.And Regal has plenty of ways to give that gift.  Add a gift card to a birthday present. Surprise a friend by texting an eCard. Treat a movie-lover to Unlimited movies. Or reward employees with a ticket to a film of their choice.</p>"
         },
         {
           "type": "select",
@@ -410,11 +410,8 @@
           {
             "type": "text",
             "id": "label",
-            "label": "Label",
-            "default": "Label"
+            "label": "Label"
           },
-
-
       {
         "type": "image_picker",
         "id": "images",
