--- a/sections/product-recommendations.liquid
+++ b/sections/product-recommendations.liquid
@@ -1,3 +1,6 @@
+{% comment %} added by amarilda {% endcomment %}
+<link rel="stylesheet" href="{{ 'related-products.css' | asset_url }}" media="print" onload="this.media='all'">
+
 <product-recommendations data-url="{{ routes.product_recommendations_url }}?section_id={{ section.id }}&product_id={{ product.id }}&limit={{ section.settings.product_limit }}">
   {% if recommendations.performed and recommendations.products_count > 0 %}
     {%- render 'featured-collection-or-products',
