--- a/assets/component-hero.css
+++ b/assets/component-hero.css
@@ -5,6 +5,7 @@
   margin-left: auto;
   margin-right: auto;
   top:80px;
+  margin-bottom:40px;
 }
 
 .hero .hero__media {
@@ -39,6 +40,7 @@
   opacity: 0;
   z-index: 1;
   background-color:transparent;
+   width:100%;
 }
 
 .hero .hero__media picture {
@@ -75,17 +77,25 @@
 
 @media only screen and (max-width: 1300px) {
   .hero{
-     height:585px;
+     height:555px;
+     margin-bottom:0;
   }
  .hero .hero__media {
-   height:585px;
+   height:555px;
  }
 }
 
-@media only screen and (max-width: 1100px) {
+@media only screen and (max-width: 1024px) {
     .hero{
      height:505px;
+      margin-bottom:0;
+      overflow:hidden;
   }
+  .hero .hero__text {
+   display:none;
+    overflow:hidden;
+}
+  
  .hero .hero__media {
     height:505px;
  }
@@ -113,6 +123,11 @@
   .hero--contained .hero__text::before {
     content: none !important;
   }
+
+  .hero{
+    margin-bottom:20px;
+    top:67px;
+  }
 }
 
 @media only screen and (min-width: 768px) {
@@ -125,6 +140,10 @@
     left: 0;
     width: 100%;
     height: 100%;
+  }
+
+  .hero{
+    width:100%;
   }
 
   .sm-hero--contained .hero__media {
