--- a/sections/main-collection-product-grid.liquid
+++ b/sections/main-collection-product-grid.liquid
@@ -34,12 +34,19 @@
   endif
 
 -%}
-
+<!-- Akeron added media query -->
+<style>
+  @media (min-width: 1920px) {
+  .custom-container {
+    grid-template-columns: 110px 1fr 110px !important;
+  }
+}
+</style>
 {%- paginate collection.products by section.settings.products_per_page -%}
   <div
     id="collection-ajax"
     data-ajax-parent
-    class="container custom-child-for-animation mt mb sm-mt sm-mb{% if section.settings.enable_full_width %} full-width{% endif %} color-{{ section.settings.color_scheme }}"
+    class="custom-container container custom-child-for-animation mt mb sm-mt sm-mb{% if section.settings.enable_full_width %} full-width{% endif %} color-{{ section.settings.color_scheme }}"
     style="
       --mt: {{ section.settings.padding_top | append: 'px' }};
       --mb: {{ section.settings.padding_bottom | append: 'px' }};
@@ -105,12 +112,17 @@
         </div>
       {%- endif -%}
     </div>
-
     <div id="pagination-ajax">
       {%- if paginate.pages > 1 -%}
         {% render 'pagination', paginate: paginate, anchor: '' %}
       {%- endif -%}
     </div>
+    <!-- Description hidden by Akeron -->
+            <!-- {%- unless collection.description == blank -%}  
+        <div class="mt-12 rte description">
+          {{ collection.description }}
+        </div>
+      {%- endunless -%} -->
   </div>
 {%- endpaginate -%}
 
