--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -346,6 +346,33 @@
         ]
       },
       {
+      "type": "new-text",
+      "name": "Text",
+      "settings": [
+        {
+          "type": "richtext",
+          "id": "text",
+          "default": "<p>New Text</p>",
+          "label": "Add Text"
+        },
+        {
+          "type": "header",
+          "content": "t:sections.headers.layout"
+        },
+        {
+          "id": "margin_top",
+          "type": "range",
+          "label": "t:sections.layout.margin_top",
+          "info": "t:sections.blocks.margin_info",
+          "unit": "px",
+          "default": 8,
+          "min": 0,
+          "max": 48,
+          "step": 4
+        }
+      ]
+    },
+      {
         "type": "title",
         "name": "t:sections.blocks.title.name",
         "limit": 1,
