--- a/snippets/css-settings-and-variables.liquid
+++ b/snippets/css-settings-and-variables.liquid
@@ -24,7 +24,7 @@
     {%- endif %}
     .color-{{ scheme.id }} {
       --color-foreground: {{ scheme.settings.foreground }};
-      --color-background: {{ scheme.settings.background }};
+      --color-background:#242327;
       --color-button-foreground: {{ scheme.settings.button_foreground }};
       --color-button-background: {{ scheme.settings.button_background }};
       --color-outlines: {{ scheme.settings.outlines }};
