--- a/assets/critical.css
+++ b/assets/critical.css
@@ -29,7 +29,12 @@ html:not(.template-password) main#MainContent {
 /* ------------------ */
 
 /* LAYOUT / container */
-
+/* Akeron added media query */
+@media (min-width: 1920px) {
+  .custom-container {
+    grid-template-columns: 110px 1fr 110px !important;
+  }
+}
 
 .container {
   display: grid;
