alfred made changes

--- a/snippets/product-badges.liquid
+++ b/snippets/product-badges.liquid
@@ -72,7 +72,7 @@
         class="badge new"
         style="
           --text-color: {{ settings.badge_new_foreground }};
-          --background-color: {{ settings.badge_new_background }};
+          --background-color: #004C97;
         "
       >
         {{ 'products.product.badges.new' | t }}
