--- a/assets/critical.css
+++ b/assets/critical.css
@@ -27,7 +27,9 @@ html:not(.template-password) main#MainContent {
 }
 
 /* ------------------ */
+
 /* LAYOUT / container */
+
 
 .container {
   display: grid;
@@ -37,12 +39,15 @@ html:not(.template-password) main#MainContent {
     margin: 0 auto; /* Center the grid */
 }
 
+
+
+
 .container > * {
   grid-column: 2;
 }
-.container.full-width {
+/* .container.full-width {
   grid-template-columns: 1fr calc(100% - (var(--container-margin) * 2)) 1fr;
-}
+} */
 .container.edge-to-edge > * {
   grid-column: 1/-1;
 }
@@ -56,7 +61,6 @@ html:not(.template-password) main#MainContent {
     margin: 0 20px;
   }
 }
-
 @media only screen and (max-width: 1023px) {
   .container.md-down-edge-to-edge > * {
     grid-column: 1/-1;
@@ -68,6 +72,29 @@ html:not(.template-password) main#MainContent {
   }
 }
 
+
+/* ALFRED 1920 GRID */
+
+.shopify-section-group-footer-group{
+   background-color: #000000;
+}
+.container-1920px{
+  margin-left: 108px;
+  margin-right: 108px;
+  background-color: #000000;
+}
+@media (min-width: 1920px) {
+.container-1920px{
+  margin-left: 108px;
+  margin-right: 108px;
+}
+}
+@media only screen and (max-width: 767px) {
+.container-1920px{
+  margin-left: 10px;
+  margin-right: 0px;
+}
+}
 /* FLEX UTILITIES */
 .flex {
   display: flex;
@@ -80,6 +107,7 @@ html:not(.template-password) main#MainContent {
   flex-direction: row !important;
 }
 .center-center {
+  align-items: center;
   justify-content: center;
 }
 .space-between {
@@ -103,6 +131,7 @@ html:not(.template-password) main#MainContent {
     flex-direction: row !important;
   }
 }
+
 
 /* ALIGNMENT UTILITIES */
 .text-align-left { text-align: left }
@@ -189,8 +218,10 @@ html:not(.template-password) main#MainContent {
   object-fit: cover;
   width: 100%;
   height: 100%;
+  
   display: block;
   max-width: 100%;
+
   position: absolute;
   top: 0;
   left: 0;
@@ -263,7 +294,9 @@ html:not(.template-password) main#MainContent {
 .media img,
 .media video {
   display:block;
-  width:100%;
+  width: 100%
+  
+
 } 
 
 .media, figure {
@@ -678,7 +711,6 @@ header.header {
   font-style: var(--font-site-header-style);
   font-weight: var(--font-site-header-weight);
   text-transform: var(--font-site-header-text-transform);
-  /* letter-spacing: var(--font-site-header-letter-spacing); */
 }
 header.header--shadow:not(.overlay),
 .sticky-header-show header.header--shadow {
@@ -712,14 +744,14 @@ html:not(.sticky-header-show) header.header.overlay {
   background-color: transparent;
 }
 header .header-content {
-  display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    gap:100px;
-    height: 80px;
-    overflow:hidden;
-  }
+display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  gap: var(--gap);
+  height: 80px;
+  overflow:hidden;
+}
 html:not(.sticky-header-show) header.header.overlay.use-background { 
   color: var(--color-background);
 }
@@ -752,10 +784,10 @@ html:not(.sticky-header-show) .header-logo.--alt-on-overlay .site-logo.--alt {
   gap: var(--gap);
 }
 .header-item.--left {
+   flex: 1 1 0%;
   justify-content:flex-start;
   gap:16px;
 }
-
 .header-item.--center{
   justify-content: center;
 }
@@ -782,7 +814,6 @@ html:not(.sticky-header-show) .header-logo.--alt-on-overlay .site-logo.--alt {
   display: grid;
   place-content: center;
 }
-
 [data-use-icons="true"] .header-item__link .cart-blip {
   display: grid;
   position: absolute;
@@ -984,9 +1015,16 @@ header.header[data-use-icons="true"] .header-item__link.has-blip-visible .header
 
 /* Button style - Secondary */
 .btn--secondary {
-  color: var(--color-outlines) !important;
+ font-family: "Roboto", sans-serif;
+font-size: 16px;
+font-weight: 700;
+line-height: 29.4px;
+text-align: left;
+  color: white !important;
   background-color: transparent !important;
-  border-color: var(--color-outlines) !important;
+  border-color: #DC2F64 !important;
+  border-width: 2px;
+  
 }
 .btn--secondary:not([disabled]):not(.disabled):hover {
   box-shadow: 0 0 0 3px var(--color-outlines);
@@ -1174,6 +1212,7 @@ header.header[data-use-icons="true"] .header-item__link.has-blip-visible .header
   font-weight: var(--font-body-weight);
   text-transform: var(--font-body-text-transform);
   letter-spacing: var(--font-body-letter-spacing);
+  /*font-size: 1.6rem;*/
 }
 .rte--wide {
   max-width: 100ch;
@@ -1196,7 +1235,7 @@ header.header[data-use-icons="true"] .header-item__link.has-blip-visible .header
 }
 
 .rte hr {
-  border-top: 1px solid var(--color-borders);
+  border-top: 0.5px solid var(--color-borders);
   margin: calc(1.6rem * var(--font-body-line-height)) 0;
 }
 .rte abbr[title],
@@ -1294,11 +1333,13 @@ summary::-webkit-details-marker {
 
 summary,
 .summary-title {
-
+  border-top: 1px solid var(--color-borders);
+  font-weight: bold;
   display: flex;
   align-items: center;
   justify-content: space-between;
   gap: 12px;
+  padding: 0.8em 0;
 }
 
 :is(summary, .summary-title) svg {
@@ -1326,6 +1367,7 @@ quantity-input, .quantity {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  border: solid 1px var(--color-borders); 
   position: relative;
   width: var(--width);
   border-radius: var(--button-border-radius);
@@ -1336,6 +1378,7 @@ quantity-input.small, .quantity.small {
   --width: 96px;
 }
 
+
 .quantity__button {
   display: grid;
   place-content: center;
@@ -1343,6 +1386,7 @@ quantity-input.small, .quantity.small {
   min-height: var(--height);
   flex-shrink: 0;
   cursor: pointer;
+  border: none;
 }
 .quantity__button svg {
   pointer-events: none;
@@ -1679,6 +1723,10 @@ input[type='checkbox']:not(.swatch) {
 }
 
 
+/* svg.feather {
+  stroke-width: var(--icon-stroke);
+}  */
+
 /* Banner hovers */
 a > .media img {
   transition: all 0.3s ease-in-out;
@@ -1743,9 +1791,30 @@ a:focus-visible > .media img {
 .link-list-heading {
   padding: 8px 0;
 }
+
+
 ul.link-list li a {
   display: inline-block;
   padding: 4px 0;
+  font-size:17.16px;
+  color: #B2B2B2;
+  line-height: 28.8px;
+  font-family: "Exo 2", sans-serif;
+
+}
+.footer-block__title{
+   font-family: "Exo 2", sans-serif;
+font-size: 18px;
+font-weight: 700;
+line-height: 28.8px;
+letter-spacing: 0.36000001430511475px;
+text-align: left;
+
+}
+
+.footer-block__description{
+   font-family: "Exo 2", sans-serif;
+  
 }
 .link-icon {
   display: inline-block;
@@ -1846,6 +1915,8 @@ ul.link-list li a {
 /* SITE FOOTER */
 footer.footer {
   z-index: 0;
+  background-color: black;
+  padding: 0;
 }
 .footer-social__link {
   display: grid;
@@ -1863,12 +1934,41 @@ footer.footer {
 details.footer-details .content {
   padding-top: 0;
 }
+
+
+
+/* Bottom Footer - Right and Socials */
+    .footer-container {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+      margin-bottom: -99px;
+      margin-left: 20px;
+      margin-right: 20px;
+ 
+    }
+    .svg-left, .svg-right {
+      flex-shrink: 0;
+    }
+    .back-to-top {
+      flex-grow: 1;
+      display: flex;
+      justify-content: center;
+    }
+
+.content{
+      width: 160px fixed;
+  
+}
 .footer-image {
   max-width: 100%;
   height: auto;
 }
 .to-top-link {
   position: absolute;
+  background: rgb(255,163,0);
+  background: linear-gradient(216deg, rgba(255,163,0,1) 0%, rgba(255,105,0,1) 100%);
   bottom: 0;
   left: 50%;
   padding: 12px 12px 6px;
@@ -1879,6 +1979,15 @@ details.footer-details .content {
 .to-top-link:hover {
   padding-bottom: 12px;
 }
+
+
+
+.border-bottom{
+  background-color: red;
+}
+.mobile-back-to-top{
+ display: none;
+}
 @media only screen and (min-width: 768px) { 
   .footer-block__title {
     pointer-events: none;
@@ -1887,9 +1996,58 @@ details.footer-details .content {
   .footer-block__title svg {
     display: none;
   }
+
+ 
 }
 @media only screen and (max-width: 767px) {
   .footer-details {
     margin-bottom: calc(-1 * var(--gap));
+  
   }
+    .footer-container {
+      display: flex;
+      flex-direction: column-reverse;
+      margin-right: 0px;
+     
+    }
+
+  .to-top-link{
+    display: none;
+  }
+
+}
+
+.grid-footer{
+      max-width: 1920px; /* Set the maximum width */
+    margin: 0 auto; /* Center the grid */
+
+}
+
+@media only screen and (max-width: 767px) {
+.grid-footer{
+    display: grid;
+    grid-template-columns: repeat(14, 3fr);
+    grid-column-gap: var(--gap);
+    grid-row-gap: var(--gap);
+    grid-auto-flow: dense;
+    position: relative;
+  
+}
+
+.shopify-section {
+  position: relative;
+
+}
+
+  .footer-main{
+    margin: 0;
+    margin-left: 50px;
+  }
+
+}
+
+@media (min-width: 1920px) {
+    .grid-footer {
+        grid-template-columns: repeat(14, 1fr); /* Adjust columns if needed */
+    }
 }
